--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
-title: "Mundana Free Jekyll Theme"
+title: "Tin tức Việt Nam"
 layout: default
 pagination:
     enabled: true
-description: "A great Jekyll theme developed by Sal @wowthemesnet."
+description: "Một nền báo chí tự do mà bạn có thể tin tưởng"
 ---
 
 
