--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+---
+title: "Viet News Tin tức Việt Nam"
+layout: default
+pagination:
+    enabled: true
+description: "Một phương tiện truyền thông tin tức độc đáo của Việt Nam."
+---
+
 <!DOCTYPE html>
 <html lang="vi">
 <head>
